# cpp_trading_bot

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/domain/models/: price.hpp
src/domain/strategy/: future_product.cpp  future_product.hpp
src/ports/: market_data_port.hpp
tests/: CMakeLists.txt  futures_product_test.cpp
